<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="10">

    <TextView
        android:id="@+id/yourprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:text="@string/name5"

        />
    <TextView
        android:id="@+id/yourname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/name6"

        />

    <EditText
        android:id="@+id/enteryourname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:hint="@string/name7"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/youremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/name8"

        />
    <EditText
        android:id="@+id/enteryouremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:hint="@string/name9"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/yourpicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:text="@string/name10"

        />

    <ImageButton
        android:id="@+id/buttonpicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:gravity="fill"
        android:src="@android:drawable/picture_frame"

         />

    <TextView
        android:id="@+id/takepicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="7"
        android:layout_column="0"
        android:text="@string/name11"

        />

    <Button
        android:id="@+id/gotochatroom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_column="0"
        android:gravity="fill"
        android:textAlignment="center"
        android:text="@string/text1" />

    <Button
        android:id="@+id/gotoweather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="9"
        android:layout_column="0"
        android:gravity="fill"
        android:textAlignment="center"
        android:text="Go to Weather Forecast" />

</GridLayout>