<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/textChar"
        android:textSize="30dp"
        android:layout_alignParentTop="true"
        />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonChar"
        android:layout_below="@id/textView"

        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkChar"
        android:layout_toEndOf="@id/button1"
        android:layout_below="@id/textView"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_below="@id/button1"
        />

    <Switch
        android:id="@+id/switchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switchChar"
        android:layout_toEndOf="@id/imageView"
        android:layout_below="@id/button1"
        />

    <EditText
        android:layout_below="@id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editChar"
        android:inputType="textPersonName"/>

</RelativeLayout>